# zenread

./: .gitignore  .prettierrc.json  Cargo.toml  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  turbo.json
