[workspace]
resolver = "1"
members = [
  "packages/app/src-tauri"
, "packages/backend"]

[workspace.package]
version = "0.0.0"
description = "Rust-based app for reading & managing posts & documents from web."
authors = ["Mike Noired"]
edition = "2021"

[workspace.dependencies]
tauri = { version = "2.0.1", features = [] }
tauri-build = { version = "2.0.1", features = [] }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"
strip = true
debug = false
